// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Body should render as a "alert" variant 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #D23F47;
}

<p
  class="circuit-0"
>
  alert
   Body
</p>
`;

exports[`Body should render as a "confirm" variant 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #138849;
}

<p
  class="circuit-0"
>
  confirm
   Body
</p>
`;

exports[`Body should render as a "highlight" variant 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 700;
}

<strong
  class="circuit-0"
>
  highlight
   Body
</strong>
`;

exports[`Body should render as a "quote" variant 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  font-style: italic;
  padding-left: 12px;
  border-left: 2px solid #3063E9;
}

<blockquote
  class="circuit-0"
>
  quote
   Body
</blockquote>
`;

exports[`Body should render as a "subtle" variant 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #666;
}

<p
  class="circuit-0"
>
  subtle
   Body
</p>
`;

exports[`Body should render with default styles 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

<p
  class="circuit-0"
>
  Body
</p>
`;

exports[`Body should render with size "one" 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

<p
  class="circuit-0"
>
  one
   Body
</p>
`;

exports[`Body should render with size "two" 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<p
  class="circuit-0"
>
  two
   Body
</p>
`;
